# DjangoProject

./: .env.example  .gitignore  Readme.md  catalog_data.json  db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/templates/users/: login.html  register.html
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_form.html  blog_list.html  confirm_delete.html  detail.html  form.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixture/: categories.json  products.json
catalog/management/commands/: add_test_data.py  init_groups.py  load_catalog.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_product_slug.py  0003_product_quantity.py  0003_remove_product_image_product_price_rub_and_more.py  0004_alter_product_options_product_image_and_more.py  0004_remove_product_quantity_product_contact.py
catalog/services/: product_service.py
catalog/templates/catalog/: base.html  contacts.html  home.html  index.html  menu.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html
config/: settings.py  urls.py
static/css/: style.css
