[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Anna <mirzeyevaaygun34@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
pillow = "^11.3.0"
ipython = "^9.5.0"
django-redis = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

psycopg2-binary = "^2.9.7"

Pillow = "^10.0.0"
